--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.3",
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
     "nodemailer": "^6.10.1",
