--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "crons": [
     {
-      "path": "/api/cron",
+      "path": "/api/complete",
+      "schedule": "0 */3 * * *"
+    },
+    {
+      "path": "/api/reminders",
       "schedule": "0 */3 * * *"
     }
   ]
