--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,6 +15,7 @@
     "mongoose": "^8.16.3",
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
